# GHLAssistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  claude.md  claudepad.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
crm/: __init__.py  alembic.ini  app.py  config.py  database.py
crm/assets/: __init__.py  blobstore.py  downloader.py  hashes.py  html.py  jobs.py
crm/migrations/: env.py  script.py.mako
crm/models/: __init__.py  activity.py  asset.py  auth.py  base.py  calendar.py  campaign.py  contact.py  conversation.py  custom_field.py  custom_value.py  form.py  funnel.py  ghl_raw.py  location.py  note.py  opportunity.py  pipeline.py  survey.py  tag.py  task.py
crm/routers/: __init__.py  calendars.py  campaigns.py  contacts.py  conversations.py  custom_fields.py  dashboard.py  forms.py  funnels.py  ghl_campaigns.py  ghl_forms.py  ghl_funnels.py  ghl_surveys.py  health.py  locations.py  pipelines.py  surveys.py  sync.py  tags.py  tasks.py  webhooks.py
crm/schemas/: contact.py  pipeline.py  sync.py
crm/security/: __init__.py  rate_limit.py  webhooks.py
crm/services/: activity_svc.py  auth_svc.py  calendar_svc.py  campaign_svc.py  contact_svc.py  conversation_svc.py  custom_field_svc.py  form_svc.py  funnel_svc.py  ghl_svc.py  messaging_svc.py  note_svc.py  pipeline_svc.py  survey_svc.py  tag_svc.py  task_svc.py
crm/sync/: __init__.py  archive.py  browser_fallback.py  export_assets.py  export_calendars.py  export_conversations.py  export_workflows.py  exporter.py  field_mapper.py  import_assets.py  import_calendars.py  import_campaigns.py  import_conversations.py  import_forms.py  import_funnel_page_builder.py  import_funnels.py  import_media_library.py  import_notes.py  import_surveys.py  import_tasks.py  import_workflows.py  importer.py  raw_store.py  sync_engine.py
crm/templates/: base.html  dashboard.html
crm/tenant/: __init__.py  deps.py  middleware.py
crm/tests/: conftest.py  test_api_calendars.py  test_api_campaigns.py  test_api_contacts.py  test_api_conversations.py  test_api_forms.py  test_api_funnels.py  test_api_pipelines.py  test_api_surveys.py  test_assets_raw_attachments.py  test_auth_rbac.py  test_calendar_svc.py  test_campaign_svc.py  test_contact_svc.py  test_conversation_svc.py  test_form_svc.py  test_funnel_svc.py  test_ghl_calendars.py  test_ghl_campaigns.py  test_ghl_conversations.py  test_ghl_forms.py  test_ghl_funnels.py  test_ghl_surveys.py  test_ghl_svc.py  test_health_routes.py  test_migrations.py  test_models.py  test_pipeline_svc.py  test_survey_svc.py  test_sync_exporter.py  test_sync_importer.py  test_webhooks_security.py
dashboard/: __init__.py  app.py  config.py  database.py
dashboard/routers/: health.py  home.py
dashboard/services/: activity_svc.py  auth_svc.py  metrics_svc.py
dashboard/templates/: base.html  home.html
dashboard/tests/: conftest.py  test_activity.py  test_auth_rbac.py  test_metrics.py  test_routes.py
data/: contact_notes_tasks_report.json
data/pre_cancel_20260216T103909Z/: discorp_blueprint.yaml  discorp_snapshot_full.json  jet_diaz_blueprint.yaml  jet_diaz_snapshot_full.json
docs/: ARCHITECTURE.md  LAUNCH_RUNBOOK.md
docs/api/: README.md  calendars.md  contacts.md  conversations.md  forms.md  opportunities.md  workflows.md
hiring_tool/: __init__.py  app.py  config.py  database.py  models.py
hiring_tool/routers/: analytics.py  board.py  candidates.py  health.py  interviews.py  positions.py  sync.py
hiring_tool/services/: analytics_svc.py  candidate_svc.py  sync_engine.py
hiring_tool/templates/: analytics.html  base.html  board.html  sync.html
hiring_tool/tests/: conftest.py  test_api.py  test_candidate_svc.py  test_health.py  test_models.py  test_sync_engine.py
knowledge/: 10dlc-complete-guide.md  common-issues.md
prompts/: 10dlc-wizard.md
scripts/: analyze_session.py  backup_restore_drill.sh  capture_contact_notes_tasks.py  capture_notes_tasks_crud.py  demo_client.py  load_test_auth.py
skills/: ghl.md
src/ghl_assistant/: __init__.py  cli.py
src/maxlevel/: __init__.py  cli.py  platform_auth.py
tests/: __init__.py  conftest.py  test_hiring_template.py
tests/api/: test_agency.py  test_contact_notes_tasks.py  test_contacts.py  test_conversation_ai.py  test_error_handling.py  test_voice_ai.py
tests/assets/: test_export_assets.py  test_funnel_page_html_assets.py  test_html_rewrite.py  test_media_library_import.py
tests/auth/: test_manager.py  test_oauth_client.py  test_storage.py
tests/browser/: test_ai_tasks.py  test_executor.py  test_ghl_urls.py  test_network_capture_response_bodies.py  test_tasks_fallback.py  test_url_normalization.py
tests/cli/: test_ai_commands.py  test_hiring_commands.py  test_voice_commands.py  test_workflow_browser_commands.py
tests/services/: test_task_svc_due_date.py
tests/sync/: test_browser_fallback.py  test_calendars_import_details.py  test_custom_field_values.py  test_custom_fields_values_export.py  test_export_conversations.py  test_import_structures.py  test_notes_tasks_export_services.py  test_notes_tasks_import.py  test_workflow_fidelity_parser.py  test_workflows_browser_export.py  test_workflows_raw_import.py
tmp/: contacts_highrise_main2.js  contacts_highrise_remoteEntry.js
workflows/: __init__.py  alembic.ini  app.py  config.py  database.py  security.py  worker.py
workflows/engine/: actions.py  context.py  evaluator.py  runner.py
workflows/migrations/: env.py
workflows/models/: __init__.py  auth.py  base.py  dispatch.py  execution.py  log.py  workflow.py
workflows/routers/: __init__.py  api.py  chat.py  dashboard.py  editor.py  executions.py  health.py  webhooks.py  workflows.py
workflows/schemas/: __init__.py  workflow.py
workflows/services/: __init__.py  auth_svc.py  chat_svc.py  dispatch_svc.py  step_svc.py  trigger_svc.py  (+1 more)
(+188 files in other folders)
