[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghl-assistant"
version = "0.1.0"
description = "GoHighLevel automation assistant - CLI tools, templates, and AI wizards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "discordwell" }
]
keywords = ["gohighlevel", "ghl", "crm", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "nodriver>=0.32.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]
hiring = [
    "fastapi[standard]>=0.110.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.7",
]
crm = [
    "fastapi[standard]>=0.110.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.7",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
ghl = "ghl_assistant.cli:app"

[project.urls]
Homepage = "https://github.com/discordwell/GHLAssistant"
Repository = "https://github.com/discordwell/GHLAssistant"

[tool.hatch.build.targets.wheel]
packages = ["src/ghl_assistant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "asyncio: mark test as async",
]
